# terminal-pet

./: .gitignore  README.md  pet.ps1  pet.sh  pyproject.toml
terminal_pet/: __main__.py  animation.py  app.py  command_watcher.py  config.py  persistence.py  renderer.py  state_machine.py  utils.py
terminal_pet/sprites/: __init__.py  dead.py  happy.py  idle.py  palette.py  running.py  scared.py  sleeping.py
