[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-pet"
version = "1.0.0"
description = "A pixel art dog that lives in your terminal"
requires-python = ">=3.9"
dependencies = ["blessed>=1.20"]

[project.scripts]
terminal-pet = "terminal_pet.app:main"
